feat: add last_played_at virtual field, display on poll view
